# autoline_api

./: .gitignore  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 12f2666f391e_initial_migration.py
app/api/: dependencies.py
app/api/routes/: auth.py  utils.py
app/api/schemas/: user.py
app/core/: config.py  exceptions.py
app/core/security/: permissions.py
app/domain/: constants.py
app/domain/entities/: user.py
app/domain/repositories/: user.py
app/domain/services/: auth_service.py  password_hasher.py  token_service.py
app/infrastructure/database/: session.py
app/infrastructure/database/models/: role.py  user.py
app/infrastructure/database/repositories/: users.py
app/infrastructure/security/: jwt_token_service.py  passlib_password_hasher.py
